plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	// --- Core Spring Boot ---
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// --- Database ---
	implementation 'org.postgresql:postgresql:42.7.3'

	// --- API Docs ---
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// --- Lombok (compile-time only) ---
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testCompileOnly 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

	// --- JWT ---
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// --- Google OAuth ---
	implementation 'com.google.api-client:google-api-client:2.6.0'
	implementation 'com.google.oauth-client:google-oauth-client:1.34.1'

	// --- Password Encoding ---
	implementation 'org.springframework.security:spring-security-crypto'

	// --- JSON Processing ---
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// --- Dev Tools ---
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// --- Testing ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
}

tasks.named('processResources') {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from('src/main/resources') {
        include '**/*.yml'
        include '**/*.yaml'
        include '**/*.properties'
    }
}